2009-04-24  Andy Buckley  <andy@insectnation.org>

	* Deleting Rivet implementations of TrackJet and D0ILConeJets: the
	code from these has now been incorporated into FastJet 2.4.0.

	* Removed all mentions of the FastJet JADE patch and the HAVE_JADE
	preprocessor macro.

	* Bug fix to D0_2008_S6879055 to ensure that cuts compare to both
	electron and positron momenta (was just comparing against
	electrons, twice, probably thanks to the miracle of cut and
	paste).

	* Converting all D0 IL Cone jets to use FastJets. Involved tidying
	D0_2004 jet azimuthal decorrelation analysis and D0_2008_S6879055
	as part of migration away from using the getLorentzJets method,
	and removing the D0ILConeJets header from quite a few analyses
	that weren't using it at all.

	* Updating CDF 2001 to use FastJets in place of TrackJet, and
	adding axis labels to its plots.

	* Note that ZEUS_2001_S4815815 uses the wrong jet definition: it
	should be a cone but curently uses kT.

	* Fixing CDF_2005_S6217184 to use correct (midpoint, R=0.7) jet
	definition. That this was using a kT definition with R=1.0 was
	only made obvious when the default FastJets constructor was
	removed.

	* Removing FastJets default constructor: since there are now
	several good (IRC safe) jet definitions available, there is no
	obvious safe default and analyses should have to specify which
	they use.

	* Moving FastJets constructors into implementation file to reduce
	recompilation dependencies, and adding new plugins.

	* Ensuring that axis labels actually get written to the output
	data file.

2009-04-22  Andy Buckley  <andy@insectnation.org>

	* Adding explicit FastJet CDF jet alg overlap_threshold
	constructor param values, since the default value from 2.3.x is
	now removed in version 2.4.0.

	* Removing use of HepMC ThreeVector::mag method (in one place
	only) since this has been removed in version 2.5.0b.

	* Fix to hepmc.i (included by rivet.i) to ignore new HepMC 2.5.0b
	GenEvent stream operator.
