@@ -5,7 +5,6 @@
 #include "Rivet/Projections/LeadingParticlesFinalState.hh"
 #include "Rivet/Projections/VetoedFinalState.hh"
 #include "Rivet/Projections/FastJets.hh"
-#include "Rivet/Projections/IsolationTools.hh"
 #include "Rivet/RivetAIDA.hh"
 
 namespace Rivet {
